[gd_scene load_steps=6 format=2]

[ext_resource path="res://menus/mein_menu/mein_menu.gd" type="Script" id=1]
[ext_resource path="res://audio/click.wav" type="AudioStream" id=2]
[ext_resource path="res://menus/shared/audio_button.gd" type="Script" id=3]
[ext_resource path="res://theme.tres" type="Theme" id=4]

[sub_resource type="ButtonGroup" id=1]

[node name="MeinMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.494118, 0.768627, 0.756863, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 203.0
margin_top = 104.0
margin_right = 820.0
margin_bottom = 496.0
custom_constants/separation = 16

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 617.0
margin_bottom = 128.0
rect_min_size = Vector2( 256, 128 )
text = "ONCE UPON A HOAGIE"
align = 1
valign = 1

[node name="Padding2" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 617.0
margin_bottom = 176.0
rect_min_size = Vector2( 0, 32 )

[node name="Play" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 180.0
margin_top = 192.0
margin_right = 436.0
margin_bottom = 232.0
rect_min_size = Vector2( 256, 40 )
focus_neighbour_top = NodePath("../Credits")
focus_neighbour_bottom = NodePath("../Settings")
size_flags_horizontal = 6
group = SubResource( 1 )
text = "Play"
script = ExtResource( 3 )
audio_effect = ExtResource( 2 )
hover_pitch = 1.5
unhover_pitch = 2.0
press_pitch = 3.0

[node name="Settings" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 180.0
margin_top = 248.0
margin_right = 436.0
margin_bottom = 288.0
rect_min_size = Vector2( 256, 40 )
focus_neighbour_top = NodePath("../Play")
focus_neighbour_bottom = NodePath("../Credits")
size_flags_horizontal = 6
group = SubResource( 1 )
text = "Settings"
script = ExtResource( 3 )
audio_effect = ExtResource( 2 )
hover_pitch = 1.5
unhover_pitch = 2.0
press_pitch = 3.0

[node name="Credits" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 180.0
margin_top = 304.0
margin_right = 436.0
margin_bottom = 344.0
rect_min_size = Vector2( 256, 40 )
focus_neighbour_top = NodePath("../Settings")
focus_neighbour_bottom = NodePath("../Play")
size_flags_horizontal = 6
group = SubResource( 1 )
text = "Credits"
script = ExtResource( 3 )
audio_effect = ExtResource( 2 )
hover_pitch = 1.5
unhover_pitch = 2.0
press_pitch = 3.0

[node name="Padding" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 360.0
margin_right = 617.0
margin_bottom = 392.0
rect_min_size = Vector2( 0, 32 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
